--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ default: &default
 
 development:
   <<: *default
-  database: basic_auth_development
+  database: astro_backend_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: basic_auth_test
+  database: astro_backend_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,8 +81,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
-  database: basic_auth_production
-  username: basic_auth
-  password: <%= ENV['BASIC_AUTH_DATABASE_PASSWORD'] %>
+#production:
+#  <<: *default
+#  database: basic_auth_production
+#  username: basic_auth
+#  password: <%= ENV['BASIC_AUTH_DATABASE_PASSWORD'] %>
