Changed SSL at nginx

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -28,4 +28,8 @@ server {
   error_page 500 502 503 504 /500.html;
   client_max_body_size 10M;
   keepalive_timeout 10;
+
+  ssl on;
+  ssl_certificate /etc/letsencrypt/live/spaceview.ml/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/spaceview.ml/privkey.pem; 
 }
