--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,13 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
+  #server_name _;
+  return 301 https://$host$request_uri;
+}
+server {
+  #listen 80 default_server deferred;
   # server_name example.com;
+  listen default_server ssl;
 
   root /home/deploy/apps/astro/current/public;
   access_log /home/deploy/apps/astro/current/log/nginx.access.log;
