--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -10,7 +10,7 @@ server {
 server {
   #listen 80 default_server deferred;
   # server_name example.com;
-  listen default_server ssl;
+  listen 443 default_server ssl;
 
   root /home/deploy/apps/astro/current/public;
   access_log /home/deploy/apps/astro/current/log/nginx.access.log;
